...
    },
    "ACCOUNT_NEXT" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Next"
          }
        }
      }
    },
    "ACCOUNT_SETUP_DESCRIPTION" : {
      "localizations" : {
...
    "APPOINTMENTS_NAVIGATION_TITLE" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Appointments"
          }
        }
      }
    },
    "APPOINTMENTS_TAB_TITLE" : {
      "extractionState" : "manual",
...
    "ASSESSMENTS_NAVIGATION_TITLE" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Assessments"
          }
        }
      }
    },
    "ASSESSMENTS_TAB_TITLE" : {
      "extractionState" : "manual",
...
            "state" : "translated",
            "value" : "Assessments"
          }
        }
      }
    },
    "Cancel" : {

    },
    "CLOSE" : {
      "comment" : "MARK: General",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Close"
          }
        }
      }
    },
    "COMPLETED_TASK_LABEL %@" : {
      "localizations" : {
...
    "REACTIONTIME_VIZ_TITLE" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Reaction Time Results"
          }
        }
      }
    },
    "Recommended Step Count" : {

...
    "REQUIRED_ITEMS_HEADING" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Required Items"
          }
        }
      }
    },
    "RESCHEDULE_BUTTON_LABEL" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Edit Details"
          }
        }
      }
    },
    "Retake Assessment" : {

...
    "SAVE_BUTTON" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Save Changes"
          }
        }
      }
    },
    "SCHEDULE_LIST_TITLE" : {
      "localizations" : {
...
    },
    "STROOP_VIZ_TITLE" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Stroop Test Results"
          }
        }
      }
    },
    "Take Questionnaire" : {

...
    "TM_VIZ_TITLE" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Trail Making Test Results"
          }
        }
      }
    },
    "Trail Making" : {

...
